drivers: sensor: htu21d: To add driver support for htu21d sensor
Add driver support for htu21d sensor

Signed-off-by: Arunmani Alagarsamy <arunmani@linumiz.com>

--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -146,6 +146,8 @@ source "drivers/sensor/lps22hh/Kconfig"
 
 source "drivers/sensor/lps25hb/Kconfig"
 
+source "drivers/sensor/htu21d/Kconfig"
+
 source "drivers/sensor/lsm303dlhc_magn/Kconfig"
 
 source "drivers/sensor/lsm6ds0/Kconfig"
